functions for buttons + & -

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 
         <div class="donutsWrapper"></div>
 
-        <div id="shoppingCart"></div>
+        <section id="shoppingCart">
+            <h2>Varukorg</h2>
+        <div id="shoppingCartItems"></div>
+        </section>
 
     </main>
 
