function that put items in shoppingCart

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <h1>Gottfrid Jästson</h1>
             </a>
             <a href="#shoppingCart" aria-label="Navigera till kundkorgen">
-              <span class="material-symbols-outlined">shopping_cart</span>
+              <span id="headerCountItems" class="material-symbols-outlined">shopping_cart</span>
             </a>
         </nav> 
     </header>
