print shopping cart

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 
         <section id="shoppingCart">
             <h2>Varukorg</h2>
-        <div id="shoppingCartItems"></div>
+        <section id="shoppingCartItems"></section>
+
+        <label for="discount" title="Discount">
+            Rabattkod
+            <input type="text" id="discount" class="lock" name="discount">
+        </label>
+
+        
         </section>
 
     </main>
