number of items in cart is showed in header

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <a href="#header" aria-label="Navigera till första sidan">
               <h1>Gottfrid Jästson</h1>
             </a>
-            <a href="#shoppingCart" aria-label="Navigera till kundkorgen">
-              <span id="headerCountItems" class="material-symbols-outlined">shopping_cart</span>
+            <a class="material-symbols-outlined" href="#shoppingCart" aria-label="Navigera till kundkorgen">
+                <p class="headerCountItems" id="headerCountItems"></p>
+              <span class="material-symbols-outlined">shopping_cart</span>
             </a>
         </nav> 
     </header>
