styling for tablet & desktop

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <section id="shoppingCartItems" class="shoppingCartItems"></section>
 
-            <label for="discount" title="Discount">
+            <label class="discount" for="discount" title="Discount">
                 Rabattkod
                 <input type="text" id="discount" class="lock" name="discount">
             </label>
