filter by category

--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
             <p>Vi säljer utsökta munkar med hemleverans.</p>
         </article>
 
+        <section class="sortingSection">
+          <label>
+            <select id="sortOptions">
+              <option selected disabled>Sortera på:</option>
+              <option id="sortRating">Betyg</option>
+              <option id="sortPriceLow">Pris: Lågt till högt</option>
+              <option id="sortPriceHigh">Pris: Högt till lågt</option>
+            </select>
+          </label>
+          <label>
+            <select id="sortCategories">
+              <option selected disabled>Välj kategori:</option>
+              <option id="categoryAll">Alla</option>
+              <option id="categoryStandard">Standard</option>
+              <option id="categorySpecial">Speciell</option>
+              <option id="categoryDeluxe">Deluxe</option>
+            </select>
+          </label>
+        </section>
+
         <div class="donutsWrapper"></div>
 
         <section class="shoppingCart" id="shoppingCart">
