--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <label>
             <select id="sortOptions">
               <option selected disabled>Sortera på:</option>
+              <option id="sortName">Namn</option>
               <option id="sortRating">Betyg</option>
               <option id="sortPriceLow">Pris: Lågt till högt</option>
               <option id="sortPriceHigh">Pris: Högt till lågt</option>
