--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                 <input type="text" id="discount" class="lock" name="discount">
             </label>
 
+            <p id="msgToUser"></p>
+
             <div class="checkoutCartSum">
                 <span>Totalt: </span>
                 <span id="cartTotalPrice"></span>
