red frame when total price is updated

--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
                 Jag vill prenumerera på Gottfrid Jästsons nyhetsbrev!
               </label>
     
-              <button type="submit" id="orderButton" class="lock">Skicka beställning</button>
+              <button type="submit" id="orderButton" class="orderButton">Skicka beställning</button>
               <p id="orderMessage"></p>
             </form>
-            <button id="clearOrder">Rensa beställning</button>
+            <button id="clearOrder" class="clearOrder">Rensa beställning</button>
           </section>
 
     </main>
