--- a/index.html
+++ b/index.html
@@ -243,6 +243,6 @@
       </section>
     </main>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.mjs"></script>
   </body>
 </html>
