--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
           <p class="headerCountItems" id="headerCountItems"></p>
           <span class="material-symbols-outlined">shopping_cart</span>
         </a>
+        <div class="menuContainer">
+          <button id="menu-button">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <div class="menu" id="menu">
+            <span>Produkter</span>
+            <span>Varukorg</span>
+            <span>Kontakt</span>
+          </div>
+        </div>
       </nav>
     </header>
 
@@ -77,7 +89,7 @@
         </label>
       </section>
 
-      <div class="donutsWrapper"></div>
+      <div class="donutsWrapper" id="donutsWrapper"></div>
 
       <section class="shoppingCart" id="shoppingCart">
         <h2>Varukorg</h2>
@@ -241,6 +253,7 @@
         </form>
         <button id="clearOrder" class="clearOrder">Rensa beställning</button>
       </section>
+      <footer id="footer">Kontakt information kommer här</footer>
     </main>
 
     <script type="module" src="script.mjs"></script>
