--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
         <a href="#header" aria-label="Navigera till första sidan">
           <h1>Gottfrid Jästson</h1>
         </a>
-        <a
-          class="material-symbols-outlined"
-          href="#shoppingCart"
-          aria-label="Navigera till kundkorgen"
-        >
-          <p class="headerCountItems" id="headerCountItems"></p>
-          <span class="material-symbols-outlined">shopping_cart</span>
-        </a>
         <div class="menuContainer">
+          <a
+            class="material-symbols-outlined"
+            href="#shoppingCart"
+            aria-label="Navigera till kundkorgen"
+          >
+            <p class="headerCountItems" id="headerCountItems"></p>
+            <span class="material-symbols-outlined">shopping_cart</span>
+          </a>
           <button id="menu-button">
             <span></span>
             <span></span>
@@ -253,7 +253,11 @@
         </form>
         <button id="clearOrder" class="clearOrder">Rensa beställning</button>
       </section>
-      <footer id="footer">Kontakt information kommer här</footer>
+      <footer id="footer">
+        <p>Munkgatan 58</p>
+        <p>518 65 Snaskköping</p>
+        <p>&copy; 2023 Gottfrid Jästson</p>
+      </footer>
     </main>
 
     <script type="module" src="script.mjs"></script>
