fixed hamburger menu style

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p class="headerCountItems" id="headerCountItems"></p>
             <span class="material-symbols-outlined">shopping_cart</span>
           </a>
-          <button id="menu-button">
+          <button id="menu-button" aria-label="for open the menu">
             <span></span>
             <span></span>
             <span></span>
