created a js map for js files

--- a/index.html
+++ b/index.html
@@ -260,6 +260,6 @@
       </footer>
     </main>
 
-    <script type="module" src="script.mjs"></script>
+    <script type="module" src="js/script.mjs"></script>
   </body>
 </html>
