--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
 
           <p>Välj betalsätt:</p>
           <label class="paymentMethodLabel" for="paymentCard">
-            <input id="paymentCard" class="lock" type="radio" name="radio" tabindex="1" />
+            <input id="paymentCard" class="lock" type="radio" name="radio" />
             Kort
           </label>
 
           <label class="paymentMethodLabel" for="paymentInvoice">
-            <input id="paymentInvoice" class="lock" type="radio" name="radio" tabindex="2" />
+            <input id="paymentInvoice" class="lock" type="radio" name="radio" />
             Faktura
           </label>
 
