aria labels & tabindex

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
               type="checkbox"
               id="storageData"
               class="checkoutValidatedCheckbox lock"
+              tabindex="0"
             />
             Jag godkänner Gottfrid Jästsons behandling av mina personuppgifter
           </label>
