--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Website for Gottfrid Jästsons donuts shop"
+      content="Gottfrid Jästsons munk affär säljer utsökta munkar för alla smaker, nu med hemleverans 24 timmar om dygnet, 7 dagar i veckan."
     />
     <meta property="og:title" content="Gottfrid Jästson" />
     <meta property="og:type" content="Website" />
-    <meta property="og:url" content="https://Gottfrid-Jästson.com" />
+    <meta property="og:url" content="https://Gottfrid-Jästson.se" />
     <meta
       property="og:image"
-      content="https://Gottfrid-Jästson.com/GottfridJästson.jpg"
+      content="https://Gottfrid-Jästson.se/GottfridJästson.jpg"
     />
     <meta name="theme-color" content="#fafafa" />
     <title>Gottfrid Jästson</title>
